@@ -189,26 +189,47 @@ temporarily disabled
 
 #
 # check usage of unencrypted secret key
-<test check-crypto-unencrypted-secret>
-  cmd = (echo dau; echo foo; echo yes) | $pcp -V vcl -k -x "n/a"
-  expect = /added to/
-</test>
+<test vcl>
+  prepare = rm -f vb2 vcl
+  <test check-vcl-crypto-unencrypted-secret>
+    cmd = (echo dau; echo foo; echo yes) | $pcp -V vcl -k -x "n/a"
+    expect = /added to/
+  </test>
+  
+  <test check-vcl-crypto-unencrypted-secret-yaml>
+    cmd = $pcp -V vcl -y
+    expect = /encrypted:  no/
+  </test>
 
-<test check-crypto-unencrypted-secret-yaml>
-  cmd = $pcp -V vcl -y
-  expect = /encrypted:  no/
-</test>
+  <test check-vcl-prepare-import-bpub>
+    cmd = $pcp -V vcl -I key-bobby-pub -P
+    expect = /added/
+  </test>
 
-<test check-crypto-unencrypted-secret-message>
-  prepare = $pcp -V vcl -I key-bobby-pub -P
-  cmd     = echo HALLO | $pcp -V vcl -e -O testencrypted -i ${idbobby}
-  expect  = /success/
-</test>
+  <test check-vcl-export-unencrypted-pubkey>
+    cmd = $pcp -V vcl -p -O testkeyvcl
+    expect = /exported/
+  </test>
 
-<test check-crypto-unencrypted-secret-read>
-  prepare = $pcp -V vcl -p | $pcp -V vb -P
-  cmd = $pcp -V vb -d -I testencrypted -x b
-  expect  = /HALLO/
+  <test check-vcl-import-bsecret>
+    cmd = $pcp -V vb2 -S -I key-bobby-sec -x b
+    expect = /${idbobby}/
+  </test>
+
+  <test check-vcl-import-unencrypted-pubkey>
+    cmd =  $pcp -V vb2 -P -I testkeyvcl
+    expect = /added/
+  </test>
+
+  <test check-vcl-crypto-unencrypted-secret-message>
+    cmd     = echo HALLO | $pcp -V vcl -e -O testencrypted -i ${idbobby}
+    expect  = /success/
+  </test>
+
+  <test check-vcl-crypto-unencrypted-secret-read>
+    cmd = $pcp -V vb2 -d -I testencrypted -x b
+    expect  = /HALLO/
+  </test>
 </test>
 
 #
